--- a/style.css
+++ b/style.css
@@ -23,10 +23,18 @@ body {
     margin: 0;
     font-family: sans-serif;
     font-size: 18px;
-    background-image: url("img/background/background7.png"); /* options: 6, 7, 8 */
-    background-position: 0 -55px;
-    background-size: 100vw 107vh;
-    background-attachment: fixed;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("img/background/background7-short.png");
+    background-size: cover;
+    background-position: center;
+    z-index: -1; /* behind everything */
 }
 
 input::-webkit-outer-spin-button,
@@ -69,6 +77,10 @@ input::-webkit-inner-spin-button {
 #header div {
     display: flex;
     flex-direction: row;
+}
+#small-header h1 {
+    display: none;
+    font-size: 125%;
 }
 #header img {
     margin-right: 20px;
@@ -456,3 +468,101 @@ h3 {
 ::-webkit-scrollbar-thumb:hover {
     background: var(--light-gray); 
 }
+
+/* <600px, 601px, 768px, 992px, 1200px */
+
+@media only screen and (max-width: 992px) {
+
+    #info-image {
+        width: 18%;
+        height: 9%;
+        margin-left: -10px;
+    }
+
+    #header {
+        height: 8%;
+    }
+    #big-header h1{
+        display: none;
+    }
+    #big-header img{
+        display: none;
+    }
+    #small-header h1{
+        display: block;
+    }
+    #header a {
+        display: none;
+    }
+    #header img {
+        margin-right: 10px;
+        width: 9%;
+    }
+    #gradient-header {
+        top: 8%;
+    }
+
+    #main {
+        flex-direction: column;
+        margin: 0;
+        padding: 10px;
+        margin-top: 13%;
+    }
+    #main-left {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        width: 100%;
+        margin: 0;
+    }
+    #main-right {
+        max-width: 100%;
+        width: 100%;
+        margin: 0;
+    }
+    #main-right > div.text-container {
+        width: 100%;
+    }
+
+    .checkbox-info:hover > .info-box {
+        position: absolute;
+        right: 0;
+        width: 250px;
+        display: flex;
+    }
+}
+
+/* @media only screen and (min-width: 601px) and (max-width: 1200px) {
+
+    #header {
+        height: 8%;
+    }
+    #big-header h1{
+        display: none;
+    }
+    #big-header img{
+        display: none;
+    }
+    #small-header h1{
+        display: inline-block;
+    }
+    #header a {
+        display: none;
+    }
+    #header img {
+        margin-right: 10px;
+        width: 9%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+}
+
+@media only screen and (min-width: 992px) {
+
+}
+
+@media only screen and (max-width: 1200px){
+
+} */
