--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
          url('/fonts/jak.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 :root {
     /* Colors */
