--- a/style.css
+++ b/style.css
@@ -25,18 +25,11 @@ body {
     margin: 0;
     font-family: sans-serif;
     font-size: 18px;
-}
 
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background-image: url("img/background/background7-short.png");
-    background-size: cover;
-    background-position: center;
-    z-index: -1; /* behind everything */
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: 0 80px;
 }
 
 input::-webkit-outer-spin-button,
