--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     font-family: sans-serif;
     font-size: 18px;
 
+    background-color: var(--black);
+
     background-image: url("img/background/background7-short.png");
     background-attachment: scroll;
     background-repeat: no-repeat;
