--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ body {
     background-image: url("img/background/background7-short.png");
     background-attachment: scroll;
     background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
+    background-position: 0 80px;
     min-height: 100dvh;
 }
 
