--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     background-color: var(--black);
 
     background-image: url("img/background/background7-short.png");
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: 0 80px;
 }
